--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.1",
+        "php": ">=7.4|>=8.0",
         "guzzlehttp/guzzle": "^7.3"
     },
     "autoload": {
