--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4|>=8.0",
+        "php": ">=7.4 | >=8.0",
         "guzzlehttp/guzzle": "^7.3"
     },
     "autoload": {
@@ -30,6 +30,6 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
